correction faute d'orthographe

--- a/README.rm
+++ b/README.rm
@@ -1,7 +1,7 @@
 todolist project
 
-Le but est de construire un outil de todolist partagée
-La cible étant pour commencer les rpojets de développement
+Le but est de construire un outil de todolist partagées
+La cible étant pour commencer les projets de développement
 
 projet tourne sous Maven 3
 
